--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,2 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>Testtest1Failed and screenshot is taken:.\screenshots.png</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
